[metadata]
name = footron-messaging
version = 0.1
url = https://github.com/BYU-PCCL/footron-messaging-python
license = MIT
author = BYU PCCL

[options]
packages = find:
python_requires = >=3.8
install_requires =
    footron-protocol @ git+https://github.com/BYU-PCCL/footron-protocol-python.git
    pydantic
    websockets
